--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,23 @@
 /* write your override styles here */
+.tag-1 {
+    background: url(../images/tag-1.png) no-repeat;
+    z-index: 7;
+    display: block;
+  }
+
+  #wall{
+    position: relative;
+    margin: 40px auto;
+    width: 980px;
+    height: 622px;
+    background: url(../images/wall.jpg) no-repeat center;
+    -moz-box-shadow: 15px 15px 47px lime, -15px -15px 47px aqua;
+    -webkit-box-shadow: 15px 15px 47px lime, -15px -15px 47px cyan;
+    box-shadow: 15px 15px 47px lime, -15px -15px 47px cyan;
+    border: 15px solid white;
+    border-bottom: 60px solid white;
+  }
+
+#wall .tag-1{
+    display: none;
+}
